--- a/login.html
+++ b/login.html
@@ -272,6 +272,9 @@
       Email: student1@beautifulmind.com<br>
       Password: password123
     </div>
+    <div>
+    <!-- Add this line -->
+<p>Don't have account? <a href="/register.html">Register</a></p></div>
   </div>
 </main>
 
