--- a/lesson2/l2quiz.html
+++ b/lesson2/l2quiz.html
@@ -176,22 +176,22 @@ const MAP_PATH = "../lessonmap/lesson-map.html";
 // Quiz Questions (10 selected from 15)
 const quiz = [
   {
-    q: "What makes a person truly beautiful according to the lesson?",
-    options: ["A) Face", "B) Clothes", "C) Mind", "D) Money"],
+    q: "Emotions and thinking should work ____.",
+    options: ["A) Separately", "B) Together", "C) Opposite", "D) Against each other"],
     answer: 2,
   },
   {
-    q: "A beautiful mind shows qualities like:",
-    options: ["A) Anger and pride", "B) Kindness and calmness", "C) Laziness and fear", "D) Loud talking"],
-    answer: 1,
-  },
-  {
-    q: "Thinking is compared to which activity in the lesson?",
-    options: ["A) Singing", "B) Sleeping", "C) Playing a sport", "D) Watching TV"],
+    q: "The mind gives us ____.",
+    options: ["A) Feelings", "B) Logic", "C) Anger", "D) Fear"],
     answer: 2,
   },
   {
-    q: "What should we do before reacting when someone annoys us?",
+    q: "The heart acts like a ____.",
+    options: ["A) Machine", "B) Compass", "C) Teacher", "D) Phone"],
+    answer: 2,
+  },
+  {
+    q: "Integrating emotion and reason means ____.",
     options: ["A) Shout", "B) Ignore", "C) Pause and think", "D) Walk away"],
     answer: 2,
   },
