--- a/login.html
+++ b/login.html
@@ -274,7 +274,7 @@
     </div>
     <div>
     <!-- Add this line -->
-<p>Don't have account? <a href="./register.html">Register</a></p></div>
+<p>Don't have account? <a href="beautifulmind/register.html">Register</a></p></div>
   </div>
 </main>
 
