--- a/register.html
+++ b/register.html
@@ -407,7 +407,7 @@ form.addEventListener('submit', async (e) => {
     statusMsg.textContent = '✅ Account created! Redirecting to login...';
 
     setTimeout(() => {
-      window.location.href = '/login.html';
+      window.location.href = './login.html';
     }, 2000);
 
   } catch (error) {
