--- a/register.html
+++ b/register.html
@@ -308,7 +308,7 @@ select option {
 
     <!-- Login Link -->
     <p class="login-link">
-      Already have an account? <a onclick="window.location.href='/login.html'">Login here</a>
+      Already have an account? <a onclick="window.location.href='./login.html'">Login here</a>
     </p>
 
     <p class="terms">
@@ -343,6 +343,55 @@ const ALLOWED_EMAILS = [
   "student3@beautifulmind.com",
   "student4@beautifulmind.com",
   "student5@beautifulmind.com",
+  "anusuya.cm@bhc.edu.in",
+"balamuralikrishnan.cm@bhc.edu.in",
+"kavitha.cm@bhc.edu.in",
+"sutha.cm@bhc.edu.in",
+"vijayalakshmi.cm@bhc.edu.in",
+"mohan.cm@bhc.edu.in",
+"hemalatha.cm@bhc.edu.in",
+"nasrinhussaina.cm@bhc.edu.in",
+"selvindelish.cm@bhc.edu.in",
+"rajasekar.cm@bhc.edu.in",
+"charlesdurai.cm@bhc.edu.in",
+"padmavathy.cm@bhc.edu.in",
+"karpagam.cm@bhc.edu.in",
+"daniel.cm@bhc.edu.in",
+"palpandian.cm@bhc.edu.in",
+"deepa.cm@bhc.edu.in",
+"maheswari.cm@bhc.edu.in",
+"manikandan.cm@bhc.edu.in",
+"mercypaulin.cm@bhc.edu.in",
+"manivannan.cm@bhc.edu.in",
+"jeyalakshmi.cm@bhc.edu.in",
+"ramar.cm@bhc.edu.in",
+"davidantony.cm@bhc.edu.in",
+"asaithambi.cm@bhc.edu.in",
+"sivasankar.cm@bhc.edu.in",
+"elayaraja.cm@bhc.edu.in",
+"ravishankar.cm@bhc.edu.in",
+"palanikumar.cm@bhc.edu.in",
+"shakila.cm@bhc.edu.in",
+"samundeeshwari.cm@bhc.edu.in",
+"rajesh.cm@bhc.edu.in",
+"sujatha.cm@bhc.edu.in",
+"vinothkumar.cm@bhc.edu.in",
+"lawrenceimmanuel.cm@bhc.edu.in",
+"karthik.cm@bhc.edu.in",
+"kanagaraju.cm@bhc.edu.in",
+"varsha.cm@bhc.edu.in",
+"dhevika.cm@bhc.edu.in",
+"vani.cm@bhc.edu.in",
+"margaret.cm@bhc.edu.in",
+"muthu kumar.cm@bhc.edu.in",
+"mehraj banu.cm@bhc.edu.in",
+"chandrasekar.cm@bhc.edu.in",
+"thilagavathi.cm@bhc.edu.in",
+"gmklaxman@gmail.com",
+"proftmpremnath@gmail.com",
+"umamaheswari.cm@bhc.edu.in",
+"bhcsumathi@gmail.com",
+"lakshmir554@gmail.com"
 ];
 
 const form = document.getElementById('registerForm');
