Update quiz questions and options in l2quiz.html

--- a/lesson2/l2quiz.html
+++ b/lesson2/l2quiz.html
@@ -192,17 +192,17 @@ const quiz = [
   },
   {
     q: "Integrating emotion and reason means ____.",
-    options: ["A) Shout", "B) Ignore", "C) Pause and think", "D) Walk away"],
+    options: ["A) Ignoring feelings", "B) Ignoring logic", "C) Using both feelings and logic together", "D) Fighting with others"],
+    answer: 3,
+  },
+  {
+    q: "When you calm yourself instead of shouting, it shows ____.",
+    options: ["A) Weakness", "B) Emotional intelligence", "C) Fear", "D) Ego"],
     answer: 2,
   },
   {
-    q: "Beauty in interaction means:",
-    options: ["A) Talking loudly", "B) Showing off", "C) Being kind and listening", "D) Using big words"],
-    answer: 2,
-  },
-  {
-    q: "Conversation becomes an art when we talk to:",
-    options: ["A) Win", "B) Show power", "C) Understand others", "D) Prove others wrong"],
+    q: "Recognising others’ emotions means noticing their ____.",
+    options: ["A) Marks", "B) Expressions and tone", "C) Clothes", "D) Books"],
     answer: 2,
   },
   {
