--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -33,6 +33,11 @@ header h1 {
   font-weight: 800;
 }
 
+.header-buttons {
+  display: flex;
+  gap: 10px;
+}
+
 .logout-link {
   background: rgba(231, 76, 60, 0.8);
   color: white;
@@ -47,6 +52,23 @@ header h1 {
 
 .logout-link:hover {
   background: rgba(231, 76, 60, 1);
+  transform: translateY(-2px);
+}
+
+.upload-questions-btn {
+  background: #ffd700;
+  color: #0f2f4a;
+  padding: 8px 16px;
+  border-radius: 20px;
+  text-decoration: none;
+  font-weight: 600;
+  cursor: pointer;
+  border: none;
+  transition: all 0.3s;
+}
+
+.upload-questions-btn:hover {
+  background: #ffc800;
   transform: translateY(-2px);
 }
 
@@ -190,6 +212,14 @@ main {
     gap: 1rem;
   }
 
+  .header-buttons {
+    width: 100%;
+  }
+
+  .header-buttons button {
+    flex: 1;
+  }
+
   .students-grid {
     grid-template-columns: 1fr;
   }
@@ -200,7 +230,10 @@ main {
 
 <header>
   <h1>👨‍💼 Admin Dashboard</h1>
-  <button class="logout-link" onclick="logout()">🚪 Logout</button>
+  <div class="header-buttons">
+    <button class="upload-questions-btn" onclick="goToUpload()">📤 Upload Questions</button>
+    <button class="logout-link" onclick="logout()">🚪 Logout</button>
+  </div>
 </header>
 
 <main>
@@ -239,7 +272,7 @@ main {
 <script type="module">
 import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
 import { getDatabase, ref, get } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js';
-import { getAuth, signOut } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
+import { getAuth, signOut, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
 
 const firebaseConfig = {
   apiKey: "AIzaSyAEMgcKGhZpui2eEYFA6T6SeYvWB51uRD0",
@@ -255,32 +288,52 @@ const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
 const auth = getAuth(app);
 
-// Check if admin
-const user = auth.currentUser;
-if (!user) {
-  window.location.href = '/login.html';
-}
+// Check if user is logged in and is admin
+onAuthStateChanged(auth, async (user) => {
+  if (!user) {
+    console.log('❌ Not logged in, redirecting to login');
+    window.location.href = './login.html';
+    return;
+  }
 
-console.log('✅ Admin logged in:', user.email);
+  try {
+    const userSnap = await get(ref(db, `users/${user.uid}`));
+    if (!userSnap.exists() || userSnap.val().role !== 'admin') {
+      console.log('❌ Not admin, redirecting to login');
+      window.location.href = './login.html';
+      return;
+    }
+    
+    console.log('✅ Admin logged in:', user.email);
+    loadStudents();
+    loadSubmissions();
+  } catch (error) {
+    console.error('Error checking admin:', error);
+    window.location.href = './login.html';
+  }
+});
 
 function switchTab(event, tabName) {
-  // Hide all tabs
   document.querySelectorAll('.tab-content').forEach(el => el.classList.remove('active'));
   document.querySelectorAll('.tab-btn').forEach(el => el.classList.remove('active'));
   
-  // Show selected tab
   document.getElementById(tabName).classList.add('active');
   event.target.classList.add('active');
 }
 
-async function logout() {
+function logout() {
   if (confirm('Logout?')) {
-    await signOut(auth);
-    window.location.href = '/login.html';
+    signOut(auth).then(() => {
+      console.log('✅ Logged out');
+      window.location.href = './login.html';
+    });
   }
 }
 
-// Load students
+function goToUpload() {
+  window.location.href = './admin-upload-questions.html';
+}
+
 async function loadStudents() {
   try {
     console.log('📊 Loading students...');
@@ -330,7 +383,6 @@ async function loadStudents() {
   }
 }
 
-// Load submissions
 async function loadSubmissions() {
   try {
     console.log('📁 Loading submissions...');
@@ -344,7 +396,9 @@ async function loadSubmissions() {
       const assignments = snapshot.val();
       
       for (const [uid, userAssignments] of Object.entries(assignments)) {
-        // Get student info
+        // Skip questionFile entry
+        if (uid === 'questionFile') continue;
+
         const userSnap = await get(ref(db, `users/${uid}`));
         const student = userSnap.exists() ? userSnap.val() : { name: 'Unknown', email: 'Unknown' };
 
@@ -374,12 +428,6 @@ async function loadSubmissions() {
     document.getElementById('submissionsTable').innerHTML = `<tr><td colspan="4" class="no-data">Error: ${error.message}</td></tr>`;
   }
 }
-
-// Initialize
-window.addEventListener('load', () => {
-  loadStudents();
-  loadSubmissions();
-});
 </script>
 
 </body>
